--- a/结构体.md
+++ b/结构体.md
@@ -1,1 +1,20 @@
-[转载自:https://www.cnblogs.com/wdliu/p/9209419.html](https://www.cnblogs.com/wdliu/p/9209419.html)
+[转载自:https://www.cnblogs.com/wdliu/p/9209419.html](https://www.cnblogs.com/wdliu/p/9209419.html)  
+#### 判断结构体是否为空  
+1.基础方法  
+```go
+if test == (testUser{}) { // 括号不能少
+		fmt.Println("test[2] is nil")
+	}
+  ```  
+  
+2.使用反射  
+```go
+type testUser struct {
+	id int
+	name string
+}
+func (tu testUser) IsEmpty() bool{
+	return reflect.DeepEqual(tu, testUser{})
+}
+```  
+
