--- a/位运算.md
+++ b/位运算.md
@@ -23,3 +23,12 @@
 
 
 https://www.cnblogs.com/yrjns/p/11246163.html
+
+
+```go
+if status == 1 { //设置状态为1
+		info = info | (1 << index)
+	} else { //清空 设置状态为0
+		info = info &^ (1 << index)
+	}
+  ```
