--- a/结构体.md
+++ b/结构体.md
@@ -17,4 +17,11 @@ func (tu testUser) IsEmpty() bool{
 	return reflect.DeepEqual(tu, testUser{})
 }
 ```  
+#### 结构体为空的区别
+结构体声明的方式有两种:
+```go
+	var parent *TreeNode    //第一种
+	parent := &TreeNode{}   //第二种
+```  
+虽然都是空的, 但是两个parent的地址是不一样的, 而go中nil的地址是固定的, 所以只有使用第一种声明方式, ```parent==nil```才成立;使用第二种声明方式, ```parent==nil```则不成立.  
 
